# Proposition-Grapher

./: README.md
back_end/: .env.example  Cargo.toml
back_end/migrations/: 20231018105131_initial-tables.sql  20240422132408_constrain_relations.sql
back_end/src/: api.rs  database.rs  main.rs
back_end/src/database/: auth.rs  formalization.rs  graph.rs
front_end/: index.html  package-lock.json  package.json
front_end/src/: App.svelte  app.css
front_end/src/components/: Graph.svelte  Home.svelte  NewProposition.svelte  Proposition.svelte  PropositionRedirect.svelte  PropositionThumbnail.svelte  Relation.svelte  RelationThumbnail.svelte  Search.svelte
front_end/src/functions/: functions.ts  types.ts
front_end/src/lib/: Login.svelte  Navbar.svelte
