[package]
name = "back_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.58"
poem-openapi = { version ="3.0.5", features = ["static-files"] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
dotenv = "0.15.0"
bcrypt = "0.15.0"
