[package]
name = "back_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version ="1.3.58", features = ["session"]}
poem-openapi = { version ="3.0.5", features = ["static-files", "uuid"] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid",] }
dotenv = "0.15.0"
bcrypt = "0.15.0"
rand = "0.8.5"
sha2 = "0.10.8"
serde = "1.0.189"
serde_json = "1.0.107"
